--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-https://weatherwidget.io
+<a class="weatherwidget-io" href="https://forecast7.com/en/40d22n74d01/asbury-park/?unit=us" data-label_1="ASBURY PARK" data-label_2="WEATHER" data-font="Noto Serif" data-theme="beige" >ASBURY PARK WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
